@@ -1,3 +1,9 @@
+2008-08-27 Jens Tkotz <jens@peino.de> 1.5.9-svn-b11
+
+ * Fix: Gallery works now in turkish! HOOORAY !
+
+   Thanks to katpatuka for fixing thins LOONG outstanding bug.
+
 2008-08-26 Jens Tkotz <jens@peino.de> 1.5.9-svn-b10
 
  * Fix: Check if comments are enabled at all for comments overview.
